typescript/checker/tests/conformance/classes/constructorDeclarations/constructorParameters/constructorParameterProperties2.ts.stderr
error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            74,
        ),
        hi: BytePos(
            75,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/classes/constructorDeclarations/constructorParameters/constructorParameterProperties2.ts:6:5
  |
6 | var c: C;
  |     ^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            181,
        ),
        hi: BytePos(
            182,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/classes/constructorDeclarations/constructorParameters/constructorParameterProperties2.ts:14:5
   |
14 | var d: D;
   |     ^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            290,
        ),
        hi: BytePos(
            291,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/classes/constructorDeclarations/constructorParameters/constructorParameterProperties2.ts:22:5
   |
22 | var e: E;
   |     ^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            410,
        ),
        hi: BytePos(
            411,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/classes/constructorDeclarations/constructorParameters/constructorParameterProperties2.ts:30:5
   |
30 | var f: F;
   |     ^

